todeploy-kubernetes/torrent/plex/plex.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: torrent
  labels:
    app: plex
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      # NonEssential
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: la1r.workload/nonessential
                operator: In
                values:
                - "true"
      containers:
      - name: plex
        image: plexinc/pms-docker
        resources:
        #   requests:
        #     memory: "1024Mi"
        #     cpu: "300m"
        #   limits:
        #     memory: "3Gi"
        #     cpu: "2000m"
        ports:
        - name: http
          containerPort: 32400
          # hostPort: 32400 # blocks scheduling
        volumeMounts:
          - name: plex-torrent-volume
            mountPath: /torrent
          - name: plex-data-volume
            mountPath: /data
          - name: plex-config-volume
            mountPath: /config
          # - name: plex-transcode-volume
          #   mountPath: /transcode
      volumes:
        - name: plex-torrent-volume
          persistentVolumeClaim:
            claimName: plex-torrent-data-claim
        - name: plex-data-volume
          persistentVolumeClaim:
            claimName: plex-data-claim
        - name: plex-config-volume
          persistentVolumeClaim:
            claimName: plex-config-claim
        # - name: plex-transcode-volume
        #   persistentVolumeClaim:
        #     claimName: plex-transcode-claim
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: plex
  name: plex-service
  namespace: torrent
spec:
  ports:
  - port: 80
    targetPort: 32400
  selector:
    app: plex
---
apiVersion: v1
kind: Service
metadata:
  name: plex-lb-service
  namespace: torrent
spec:
  ports:
  - name: plex
    port: 32400
    targetPort: 32400
  - name: http
    port: 80
    targetPort: 32400
  selector:
    app: plex
  type: LoadBalancer
  loadBalancerIP: 192.168.6.60

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-https
  namespace: torrent
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  tls:
  - secretName: plex-bas-tls
  rules:
  - host: plex.bas
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: plex-service
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-http
  namespace: torrent
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "false"
    traefik.ingress.kubernetes.io/router.entrypoints: "web"
    traefik.ingress.kubernetes.io/router.middlewares: "traefik-http-redirect-to-https@kubernetescrd"
spec:
  rules:
  - host: plex.bas
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: plex-service
            port:
              number: 80
